--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -15,35 +15,5 @@
             vars:
               ansible_test_collections: true
             voting: false
-    periodic:
-      jobs:
-        - build-ansible-collection
-        - build-ansible-base
-        - ansible-test-cloud-integration-vcenter_only-python36:
-            vars:
-              ansible_test_collections: true
-            voting: false
-        - ansible-test-cloud-integration-vcenter_1esxi-python36:
-            vars:
-              ansible_test_collections: true
-            voting: false
-        - ansible-test-cloud-integration-vcenter_2esxi-python36:
-            vars:
-              ansible_test_collections: true
-            voting: false
     gate:
-      jobs:
-        - build-ansible-collection
-        - build-ansible-base
-        - ansible-test-cloud-integration-vcenter_only-python36:
-            vars:
-              ansible_test_collections: true
-            voting: false
-        - ansible-test-cloud-integration-vcenter_1esxi-python36:
-            vars:
-              ansible_test_collections: true
-            voting: false
-        - ansible-test-cloud-integration-vcenter_2esxi-python36:
-            vars:
-              ansible_test_collections: true
-            voting: false
+      jobs: []
