--- a/tests/integration/targets/vmware_guest_disk/tasks/main.yml
+++ b/tests/integration/targets/vmware_guest_disk/tasks/main.yml
@@ -280,3 +280,29 @@
   assert:
     that:
         - test_recreate_disk is changed
+
+- name: remove disk with destroy file
+  vmware_guest_disk:
+    hostname: "{{ vcenter_hostname }}"
+    username: "{{ vcenter_username }}"
+    password: "{{ vcenter_password }}"
+    datacenter: "{{ dc1 }}"
+    validate_certs: no
+    name: "{{ virtual_machines[0].name }}"
+    disk:
+        - state: "absent"
+          scsi_controller: 0
+          unit_number: 3
+          destroy: true
+        - state: "absent"
+          scsi_controller: 0
+          unit_number: 4
+  register: test_remove_with_destroy
+
+- debug:
+    msg: "{{ test_remove_with_destroy }}"
+
+- name: assert that changes were made
+  assert:
+    that:
+        - test_remove_with_destroy is changed
