--- a/changelogs/fragments/69-vmware-extract-repeat-code.yaml
+++ b/changelogs/fragments/69-vmware-extract-repeat-code.yaml
@@ -1,2 +1,2 @@
 minor_changes:
-- vmware - Extracts repeated code from configure_vapp_properties() to set_vapp_properties() in vmware_guest.py.
+- vmware_guest - Extracts repeated code from configure_vapp_properties() to set_vapp_properties() in vmware_guest.py.
