Inventory enhancements (ansible/ansible#68393)
- [feat] Allowed encrypted username/password. Until ansible/ansible#67823 is merged.
- [feat] Allowed `properties` to accept any path level (e.g `config`)
- [feat] Property option can be set to value of ‘all’. To query all VM properties.
- [feat] Added `hostnames`. To make `inventory_hostname` configurable. ansible/ansible#55137, Fixes ansible/ansible#55135, ansible/ansible#63939
- [feat] Added `with_sanitized_property_name`. To sanitized property name and transform it to snake case for better templating.
- [feat] Added `with_nested_properties`. To transform properties to nested dictionary.
- [feat] Added `with_path` option. To support group by path hierarchy. Related ansible/ansible#52782 ansible/ansible#55576, - Fixes ansible/ansible#54339, ansible/ansible#54339
- [feat] Added Contractable options. Fixes ansible/ansible#66767, ansible/ansible#65678, ansible/ansible#66411
- [perf] Improved properties query performance. Fixes ansible/ansible#66042, ansible/ansible#56786
- [refactorRefactored cache code.
- [bug] Fixed `_login_vapi` that make fail for vcsim.
- [test][refactor] Refactored `inventory_vmware_vm_inventory` test target.
- [test][feat] Added a number of test cases.
- [test][bug] Fixed bug where ansible-test with —debug fail
- [plugin][feat] Added `resources` option to limit VM search scope. ansible-collections/vmware#45

--- a/tests/integration/targets/inventory_vmware_vm_inventory/playbook/test_options.yml
+++ b/tests/integration/targets/inventory_vmware_vm_inventory/playbook/test_options.yml
@@ -9,6 +9,7 @@
         content: |-
           plugin: community.vmware.vmware_vm_inventory
           strict: False
+          validate_certs: False
           with_nested_properties: False
           properties:
             - config.name
@@ -16,8 +17,8 @@
           hostnames:
             - 'skip_undefined_empty_none_var'
             - 'config.name + "_" + runtime.powerState'
-
-    - name: Test properties option are populate
+   
+    - name: Test properties option are populate  
       assert:
         that:
           - "'config.name' in test_host.value"
@@ -30,16 +31,17 @@
           - test_host.key == (test_host.value['config.name'] + "_" + test_host.value['runtime.powerState'])
 
 
-    - name: Inventory with 'all' properties
+    - name: Inventory with 'ALL' properties
       include_tasks: build_inventory.yml
       vars:
         content: |-
           plugin: community.vmware.vmware_vm_inventory
           strict: False
+          validate_certs: False
           with_nested_properties: False
-          properties: ['all']
-
-    - name: Test properties(all) option are populate
+          properties: ALL
+   
+    - name: Test properties(ALL) option are populate  
       assert:
         that:
           - "'name' in test_host.value"
@@ -52,43 +54,47 @@
         content: |-
           plugin: community.vmware.vmware_vm_inventory
           strict: False
+          validate_certs: False
           with_nested_properties: False
           properties:
             - config
-
-    - name: Test properties(config) option are populate
+   
+    - name: Test properties(config) option are populate  
       assert:
         that:
           - "'name' not in test_host.value"
           - "'config.name' in test_host.value"
 
-    # TODO: Uncomment once with_path is included
-    # - name: Inventory with 'with_path' option
-    #   include_tasks: build_inventory.yml
-    #   vars:
-    #     content: |-
-    #       plugin: community.vmware.vmware_vm_inventory
-    #       strict: False
-    #       with_path: True
 
-    # - name: Test path option
-    #   assert:
-    #     that:
-    #       - "'path' in test_host.value"
+    - name: Inventory with 'with_path' option
+      include_tasks: build_inventory.yml
+      vars:
+        content: |-
+          plugin: community.vmware.vmware_vm_inventory
+          strict: False
+          validate_certs: False
+          with_path: True
+   
+    - name: Test path option
+      assert:
+        that:
+          - "'path' in test_host.value"
 
-    # - name: Inventory with rooted 'with_path' option
-    #   include_tasks: build_inventory.yml
-    #   vars:
-    #     content: |-
-    #       plugin: community.vmware.vmware_vm_inventory
-    #       strict: False
-    #       with_path: my_center
+    - name: Inventory with rooted 'with_path' option
+      include_tasks: build_inventory.yml
+      vars:
+        content: |-
+          plugin: community.vmware.vmware_vm_inventory
+          strict: False
+          validate_certs: False
+          with_path: my_center
 
-    # - name: Test path option with rooted path
-    #   assert:
-    #     that:
-    #       - "'path' in test_host.value"
-    #       - "'my_center' in test_host.value.group_names"
+    - name: Test path option with rooted path
+      assert:
+        that:
+          - "'path' in test_host.value"
+          - "'my_center' in test_host.value.group_names"
+
 
     - name: Inventory 'with_nested_properties' option
       include_tasks: build_inventory.yml
@@ -96,6 +102,7 @@
         content: |-
           plugin: community.vmware.vmware_vm_inventory
           strict: False
+          validate_certs: False
           properties:
             - config.name
             - config.uuid
@@ -107,96 +114,56 @@
         that:
           - test_host.value.config.name is defined
 
-    # TODO: Uncomment once sanitize_property_name is included
-    # - name: Inventory 'sanitize_property_name' option
-    #   include_tasks: build_inventory.yml
-    #   vars:
-    #     content: |-
-    #       plugin: community.vmware.vmware_vm_inventory
-    #       strict: False
-    #       properties:
-    #         - config.name
-    #         - config.uuid
-    #         - runtime.powerState
 
-    #       with_nested_properties: False
-    #       with_sanitized_property_name: True
-
-    # - name: Test 'with_nested_properties' option
-    #   assert:
-    #     that:
-    #       - test_host.value.runtime_power_state is defined
-
-
-    - name: Inventory 'Constructable' options - keyed_groups
+    - name: Inventory 'sanitize_property_name' option
       include_tasks: build_inventory.yml
       vars:
         content: |-
           plugin: community.vmware.vmware_vm_inventory
           strict: False
+          validate_certs: False
+          properties:
+            - config.name
+            - config.uuid
+            - runtime.powerState
+
+          with_nested_properties: False
+          with_sanitized_property_name: True
+
+    - name: Test 'with_nested_properties' option
+      assert:
+        that:
+          - test_host.value.runtime_power_state is defined
+
+
+    - name: Inventory 'Constructable' options
+      include_tasks: build_inventory.yml
+      vars:
+        content: |-
+          plugin: community.vmware.vmware_vm_inventory
+          strict: False
+          validate_certs: False
           with_nested_properties: True
           properties:
             - config.name
             - config.uuid
             - config.guestId
             - runtime.powerState
-          keyed_groups:
-            - key: 'config.guestId'
-              separator: ''
-            - key: 'runtime.powerState'
-              separator: ''
 
-    - name: Test 'Constructable' options - keyed_groups
-      assert:
-        that:
-          - "'poweredOff' in test_host.value.group_names"
-
-
-    - name: Inventory filters options
-      include_tasks: build_inventory.yml
-      vars:
-        content: |-
-          plugin: community.vmware.vmware_vm_inventory
-          strict: False
-          with_nested_properties: True
-          properties:
-            - config.name
-            - runtime.powerState
-          filters:
-            - runtime.powerState == "poweredOff"
-          hostnames:
-            - config.name
-
-    - name: Test filters options
-      assert:
-        that:
-          - "'DC0_H0_VM0' in test_host.value.groups.all"
-
-
-    - name: Inventory 'Constructable' options - compose, groups
-      include_tasks: build_inventory.yml
-      vars:
-        content: |-
-          plugin: community.vmware.vmware_vm_inventory
-          strict: False
-          with_nested_properties: True
-          properties:
-            - config.uuid
-            - config.guestId
-            - runtime.powerState
-            - config.name
           compose:
             ansible_host: 'config.name'
             composed_var: 'config.name'
+
           groups:
             VMs: true
+
           keyed_groups:
             - key: 'config.guestId'
               separator: ''
             - key: 'runtime.powerState'
               separator: ''
 
-    - name: Test 'Constructable' options - compose, groups
+    - name: Test 'Constructable' options
       assert:
         that:
           - "'VMs' in test_host.value.group_names"
@@ -206,43 +173,51 @@
           - test_host.value.ansible_host == test_host.value.config.name
           - test_host.value.composed_var == test_host.value.config.name
 
-    - name: Inventory 'with_tag' option
+
+    - name: Inventory 'resources' option
       include_tasks: build_inventory.yml
       vars:
         content: |-
           plugin: community.vmware.vmware_vm_inventory
           strict: False
-          with_nested_properties: True
-          with_tags: True
-          properties:
-            - config.name
-            - config.uuid
-            - config.guestId
-            - runtime.powerState
-
-    - name: Test 'with_tags' options
-      assert:
-        that:
-          - "'tags' in test_host.value"
-      when: not (vcsim is defined)
-
-    - name: Inventory with binary values (https://github.com/ansible/awx/issues/7052)
-      include_tasks: build_inventory.yml
-      vars:
-        content: |-
-          plugin: community.vmware.vmware_vm_inventory
-          strict: False
-          with_nested_properties: True
-          properties:
-            - config.vmxConfigChecksum
-            - config.name
-            - summary.runtime.powerState
+          validate_certs: False
+          with_nested_properties: False
           hostnames:
             - config.name
+          properties:
+            - config.name
+          resources:
+            - datacenter:
+                - DC0
+              resources:
+                - compute_resource:
+                    - DC0_H0
 
-    - name: Test filters options
+    - name: Test 'resources' options
       assert:
         that:
-          - "'DC0_H0_VM0' in test_host.value.groups.all"
-          - test_host.value.config.name is defined
-          - test_host.value.config.vmxConfigChecksum is defined
+          - "'DC0_H0_VM0' in hostvars"
+          - "'DC0_C0_RP0_VM0' not in hostvars"
+
+
+    - when: vcsim is not defined 
+      block:
+        - name: Inventory 'with_tag' option
+          include_tasks: build_inventory.yml
+          vars:
+            content: |-
+              plugin: community.vmware.vmware_vm_inventory
+              strict: False
+              validate_certs: False
+              with_nested_properties: True
+              with_tags: True
+              properties:
+                - config.name
+                - config.uuid
+                - config.guestId
+                - runtime.powerState
+
+        - name: Test 'with_tags' options
+          assert:
+            that:
+              - "'tags' in test_host.value"
