--- a/tests/integration/targets/inventory_vmware_vm_inventory/playbook/build_inventory.yml
+++ b/tests/integration/targets/inventory_vmware_vm_inventory/playbook/build_inventory.yml
@@ -1,20 +1,11 @@
 ---
-- name: Set inventory content
-  copy:
-    dest: "{{ lookup('env', 'INVENTORY_DIR') }}/tmp.vmware.yml"
-    content: |
-      {{ content }}
-      hostname: '{{ vcenter_hostname }}'
-      username: '{{ vcenter_username }}'
-      password: '{{ vcenter_password }}'
-      port: '{{ vcenter_port|default('443') }}'
-      validate_certs: {{ vmware_validate_certs|default('no') }}
-  changed_when: false
-  check_mode: false
+  - name: Set inventory content
+    copy:
+      dest: "{{ lookup('env', 'ANSIBLE_INVENTORY') }}/tmp.vmware.yml"
+      content: "{{ content }}"
 
-- meta: refresh_inventory
+  - meta: refresh_inventory
 
-- name: Refresh test_host
-  set_fact:
-    test_host: "{{ hostvars | dict2items | first}}"
-  when: hostvars | length > 1
+  - name: Refresh test_host
+    set_fact:
+      test_host: "{{ hostvars | dict2items | first}}"
