--- a/tests/integration/targets/inventory_vmware_vm_inventory/playbook/test_inventory_cache.yml
+++ b/tests/integration/targets/inventory_vmware_vm_inventory/playbook/test_inventory_cache.yml
@@ -1,41 +1,38 @@
 ---
 - name: Test inventory cache
   hosts: localhost
+  connection: local
   gather_facts: no
   tasks:
-    - find:
-        paths: "{{ lookup('env', 'ANSIBLE_CACHE_PLUGIN_CONNECTION') }}"
-        patterns: "community.vmware.vmware_vm_inventory*"
+    - find: 
+        paths: "inventory_cache"
+        patterns: "vmware_vm_inventory_*"
       register: result
 
     - name: Cache directory exist
       fail:
-        msg:  Cache not found. Please debug.
-      when: result.matched|int == 0
-      ignore_errors: yes
-
-    - when: result.matched|int == 0
-      meta: end_play
+        msg:  not found. Please debug.
+      when: result.matched|int != 0
 
     - set_fact:
         cached_groups: "{{groups}}"
         cached_hostvars: "{{hostvars}}"
-
+    
     - meta: refresh_inventory
 
     - name: 'Compare groups'
       fail:
         msg: "{{ item.key }} not found in cached groups. Please debug."
       when: cached_groups[item.key] is not defined
-      loop:  "{{ q('dict', groups) }}"
+      loop:  "{{ q('dict', groups) }}" 
       loop_control:
         label: "{{ item.key }}"
-
+  
     - name: 'Compare hosts'
       fail:
         msg: "{{ item.key }} not found in cached hosts. Please debug."
       when: cached_hostvars[item.key] is not defined
-      loop:  "{{ q('dict', hostvars) }}"
+      loop:  "{{ q('dict', hostvars) }}" 
       loop_control:
         label: "{{ item.key }}"
 
