--- a/tests/integration/targets/inventory_vmware_vm_inventory/playbook/test_vmware_vm_inventory.yml
+++ b/tests/integration/targets/inventory_vmware_vm_inventory/playbook/test_vmware_vm_inventory.yml
@@ -6,10 +6,16 @@
 - name: Test VMware Guest Dynamic Inventroy Plugin
   hosts: localhost
   tasks:
-    - name: Check that there is 'all' group present in inventory
+    - name: store the vcenter container ip
+      set_fact:
+        vcsim: "{{ lookup('env', 'VCENTER_HOSTNAME') }}"
+
+    - name: Check that there are 'all' and 'otherGuest' groups present in inventory
       assert:
         that:
           - "'all' in groups"
+          - "'otherGuest' in groups"
+
 
     - name: Check if Hostname and other details are populated in hostvars
       assert:
