--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,10 +1,14 @@
+---
 namespace: community
 name: vmware
-version: 0.2.0
+# the version key is generated during the release by Zuul
+# https://github.com/ansible-network/releases/tree/master/ansible_releases/cmd
+# A script based on https://pypi.org/project/pbr/ will generate the version
+# key. The version value depends on the tag or the last git tag.
 readme: README.md
 authors:
   - Ansible (https://github.com/ansible)
-description: null
+description:
 license: GPL-3.0-or-later
 license_file: COPYING
 tags:
