--- a/tests/integration/targets/vmware_guest_network/tasks/main.yml
+++ b/tests/integration/targets/vmware_guest_network/tasks/main.yml
@@ -369,3 +369,56 @@
     assert:
       that:
         - create_netaddr_pg.changed is sameas true
+
+  - name: gather network adapters' facts of the virtual machine
+    vmware_guest_network:
+      validate_certs: False
+      hostname: "{{ vcenter_hostname }}"
+      username: "{{ vcenter_username }}"
+      password: "{{ vcenter_password }}"
+      name: test_vm1
+      gather_network_info: true
+    register: nic_info
+
+  - name: check that nic_info includes network_info
+    assert:
+      that:
+        - "{{ nic_info.network_info | bool }}"
+
+  - name: Remove all network interfaces with loop
+    vmware_guest_network:
+      validate_certs: False
+      hostname: "{{ vcenter_hostname }}"
+      username: "{{ vcenter_username }}"
+      password: "{{ vcenter_password }}"
+      name: test_vm1
+      mac_address: "{{ item.mac_address }}"
+      state: absent
+    loop: "{{ nic_info.network_info }}"
+
+  - name: gather network adapters' facts of the virtual machine
+    vmware_guest_network:
+      validate_certs: False
+      hostname: "{{ vcenter_hostname }}"
+      username: "{{ vcenter_username }}"
+      password: "{{ vcenter_password }}"
+      name: test_vm1
+      gather_network_info: true
+    register: nic_info2
+
+  - name: check that there's no adapters left
+    assert:
+      that:
+        - "{{ nic_info2.network_info | length | int }} == 0"
+
+  - name: add new adapters
+    vmware_guest_network:
+      validate_certs: False
+      hostname: "{{ vcenter_hostname }}"
+      username: "{{ vcenter_username }}"
+      password: "{{ vcenter_password }}"
+      name: test_vm1
+      network_name: "{{ item.network_name }}"
+      state: present
+    loop:
+      - "VM Network"
