--- a/tests/integration/targets/inventory_vmware_vm_inventory/playbook/test_vmware_vm_inventory.yml
+++ b/tests/integration/targets/inventory_vmware_vm_inventory/playbook/test_vmware_vm_inventory.yml
@@ -3,15 +3,13 @@
 # GNU General Public License v3.0+ (see COPYING or https://www.gnu.org/licenses/gpl-3.0.txt)
 
 ---
-- name: Test VMware Guest Dynamic Inventory Plugin
+- name: Test VMware Guest Dynamic Inventroy Plugin
   hosts: localhost
   tasks:
-    - name: Check that there are 'all' and 'otherGuest' groups present in inventory
+    - name: Check that there is 'all' group present in inventory
       assert:
-        that: "'{{ item }}' in {{ groups.keys() | list }}"
-      with_items:
-      - all
-      - otherGuest
+        that:
+          - "'all' in groups"
 
     - name: Check if Hostname and other details are populated in hostvars
       assert:
