Temporarily disable Tag and Category tests
Signed-off-by: Abhijeet Kasurde <akasurde@redhat.com>

--- a/tests/integration/targets/vmware_cluster_info/tasks/main.yml
+++ b/tests/integration/targets/vmware_cluster_info/tasks/main.yml
@@ -61,19 +61,20 @@
       name: prepare_vmware_tests
     vars:
       setup_category: true
-      setup_tag: true
+      # Temporarily disabled
+      # setup_tag: true
 
-  - name: Apply tag to cluster
-    vmware_tag_manager:
-      hostname: "{{ vcenter_hostname }}"
-      username: "{{ vcenter_username }}"
-      password: "{{ vcenter_password }}"
-      validate_certs: no
-      tag_names:
-        - '{{ cluster_category }}:{{ cluster_tag }}'
-      state: present
-      object_name: '{{ ccr1 }}'
-      object_type: ClusterComputeResource
+  # - name: Apply tag to cluster
+  #   vmware_tag_manager:
+  #     hostname: "{{ vcenter_hostname }}"
+  #     username: "{{ vcenter_username }}"
+  #     password: "{{ vcenter_password }}"
+  #     validate_certs: no
+  #     tag_names:
+  #       - '{{ cluster_category }}:{{ cluster_tag }}'
+  #     state: present
+  #     object_name: '{{ ccr1 }}'
+  #     object_type: ClusterComputeResource
 
   - name: Get info about cluster
     vmware_cluster_info:
@@ -88,4 +89,4 @@
   - assert:
       that:
         - cluster_info is defined
-        - cluster_info.clusters[ccr1].tags is defined
+        #- cluster_info.clusters[ccr1].tags is defined
