Keyed groups in inventory plugin
Depends-On: https://github.com/ansible-collections/vmware/pull/129

This PR is based upon work done by dacrystal

This PR adds a 'keyed_groups' feature in vmware_vm_inventory.
Updated documentation and examples to match feature requirement.
Added test case.

--- a/tests/integration/targets/vmware_vm_inventory/test_inventory.yml
+++ b/tests/integration/targets/vmware_vm_inventory/test_inventory.yml
@@ -6,7 +6,6 @@
   tasks:
     - assert:
         that:
-            # TODO: Commenting temporarily once keyed_groups added uncomment following
-            # - "{{ groups['debian8_64Guest'] | length }} == 4"
+            - "{{ groups['debian8_64Guest'] | length }} == 4"
             - hostvars['DC0_H0_VM0'] is defined
 
