Revert "Temporarily disable Tag and Category tests"
This reverts commit ba89d6adb2b536c61fa03fef150f0c186feaa6c5.

We should not need this anymore.

--- a/tests/integration/targets/vmware_cluster_facts/tasks/main.yml
+++ b/tests/integration/targets/vmware_cluster_facts/tasks/main.yml
@@ -62,20 +62,19 @@
       name: prepare_vmware_tests
     vars:
       setup_category: true
-      # Temporarily disabled
-      # setup_tag: true
+      setup_tag: true
 
-  # - name: Apply tag to cluster
-  #   vmware_tag_manager:
-  #     hostname: "{{ vcenter_hostname }}"
-  #     username: "{{ vcenter_username }}"
-  #     password: "{{ vcenter_password }}"
-  #     validate_certs: no
-  #     tag_names:
-  #       - '{{ cluster_category }}:{{ cluster_tag }}'
-  #     state: present
-  #     object_name: '{{ ccr1 }}'
-  #     object_type: ClusterComputeResource
+  - name: Apply tag to cluster
+    vmware_tag_manager:
+      hostname: "{{ vcenter_hostname }}"
+      username: "{{ vcenter_username }}"
+      password: "{{ vcenter_password }}"
+      validate_certs: no
+      tag_names:
+        - '{{ cluster_category }}:{{ cluster_tag }}'
+      state: present
+      object_name: '{{ ccr1 }}'
+      object_type: ClusterComputeResource
 
   - name: Get facts about cluster
     vmware_cluster_facts:
@@ -90,4 +89,4 @@
   - assert:
       that:
         - cluster_info is defined
-        #- cluster_info.clusters[ccr1].tags is defined
+        - cluster_info.clusters[ccr1].tags is defined
