inventory_vmware_vm_inventory/test: vcsim case
Better handling of vcsim.

--- a/tests/integration/targets/inventory_vmware_vm_inventory/playbook/test_options.yml
+++ b/tests/integration/targets/inventory_vmware_vm_inventory/playbook/test_options.yml
@@ -169,4 +169,4 @@
       assert:
         that:
           - "'tags' in test_host.value"
-      ignore_errors: yes # for vcsim
+      when: not (vcsim is defined)
