--- a/tests/integration/targets/inventory_vmware_vm_inventory/playbook/test_options.yml
+++ b/tests/integration/targets/inventory_vmware_vm_inventory/playbook/test_options.yml
@@ -128,41 +128,28 @@
     #       - test_host.value.runtime_power_state is defined
 
 
-    # - name: Inventory 'Constructable' options
-    #   include_tasks: build_inventory.yml
-    #   vars:
-    #     content: |-
-    #       plugin: community.vmware.vmware_vm_inventory
-    #       strict: False
-    #       with_nested_properties: True
-    #       properties:
-    #         - config.name
-    #         - config.uuid
-    #         - config.guestId
-    #         - runtime.powerState
+    - name: Inventory 'Constructable' options - keyed_groups
+      include_tasks: build_inventory.yml
+      vars:
+        content: |-
+          plugin: community.vmware.vmware_vm_inventory
+          strict: False
+          with_nested_properties: True
+          properties:
+            - config.name
+            - config.uuid
+            - config.guestId
+            - runtime.powerState
+          keyed_groups:
+            - key: 'config.guestId'
+              separator: ''
+            - key: 'runtime.powerState'
+              separator: ''
 
-    #       compose:
-    #         ansible_host: 'config.name'
-    #         composed_var: 'config.name'
-
-    #       groups:
-    #         VMs: true
-
-    #       keyed_groups:
-    #         - key: 'config.guestId'
-    #           separator: ''
-    #         - key: 'runtime.powerState'
-    #           separator: ''
-
-    # - name: Test 'Constructable' options
-    #   assert:
-    #     that:
-    #       - "'VMs' in test_host.value.group_names"
-    #       - "'poweredOff' in test_host.value.group_names"
-    #       - "'ansible_host' in test_host.value"
-    #       - "'composed_var' in test_host.value"
-    #       - test_host.value.ansible_host == test_host.value.config.name
-    #       - test_host.value.composed_var == test_host.value.config.name
+    - name: Test 'Constructable' options - keyed_groups
+      assert:
+        that:
+          - "'poweredOff' in test_host.value.group_names"
 
     - name: Inventory 'with_tag' option
       include_tasks: build_inventory.yml
@@ -182,4 +169,4 @@
       assert:
         that:
           - "'tags' in test_host.value"
-      ignore_errors: yes # for vcsim
+      when: not (vcsim is defined)
