Imported prepare role in test

--- a/tests/integration/targets/vmware_dvs_host/main.yml
+++ b/tests/integration/targets/vmware_dvs_host/main.yml
@@ -1,4 +1,8 @@
 ---
+- import_role:
+    name: prepare_vmware_tests
+  vars:
+    setup_datacenter: true
 - name: 'Attach the hosts to the DVSwitch without specifying any vnics (Issue #185)'
   block:
   - name: Create the DVSwitch
