galaxy: ensure the import works
- remove `license` key from `galaxy.yml`
- adjust the DOCUMENTATION sections of the following modules:
    - vmware_content_deploy_ovf_template
    - vmware_export_ovf
    - vmware_guest
    - vmware_guest_network
    - vmware_guest_tools_upgrade

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -9,8 +9,7 @@ readme: README.md
 authors:
   - Ansible (https://github.com/ansible)
 description:
-license: GPL-3.0-or-later
-license_file: COPYING
+license_file: LICENSE
 tags:
   - cloud
   - vmware
