vmware_dvs_portgroup_info: show the key value
Include the value of the Portgroup `key` in the result.

--- a/tests/integration/targets/vmware_dvs_portgroup_info/tasks/main.yml
+++ b/tests/integration/targets/vmware_dvs_portgroup_info/tasks/main.yml
@@ -54,3 +54,4 @@
 - assert:
     that:
       - "dvs_results_0002['dvs_portgroup_info']['DVS0'] is defined"
+      - dvs_results_0002['dvs_portgroup_info']['DVS0'][0].key
