fix of the pointed out part
https://github.com/ansible-collections/vmware/pull/224#discussion_r440362954
https://github.com/ansible-collections/vmware/pull/224#discussion_r440363689
https://github.com/ansible-collections/vmware/pull/224#discussion_r440366253
delete a reset_iscsi_config_tasks.yml

--- a/changelogs/fragments/224-vmware_host_iscsi.yml
+++ b/changelogs/fragments/224-vmware_host_iscsi.yml
@@ -1,2 +1,2 @@
 minor_changes:
-  - vmware_host_iscsi - new code module for a new feature for manage the iSCSI configuration of ESXi host
+  - vmware_host_iscsi - a new module for the ESXi hosts that is dedicated to the management of the iSCSI configuration
