--- a/.gitignore
+++ b/.gitignore
@@ -385,4 +385,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Antsibull-changelog
+changelogs/.plugin-cache.yaml
+
 # End of https://www.gitignore.io/api/git,linux,pydev,python,windows,pycharm+all,jupyternotebook,vim,webstorm,emacs,dotenv
