--- a/changelogs/config.yaml
+++ b/changelogs/config.yaml
@@ -1,6 +1,6 @@
 changelog_filename_template: ../CHANGELOG.rst
 changelog_filename_version_depth: 0
-changes_file: ../changelog.yaml
+changes_file: changelog.yaml
 changes_format: combined
 keep_fragments: true
 mention_ancestor: true
